--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         GIS, Remote Sensing, WebGIS, Drone Mapping and LiDAR technologies.
                         This platform helps students, researchers and GIS professionals
                         learn geospatial technologies through study materials,
-                        datasets, practical tutorials and career guidance.
+                        datasets, practical tutorials and career guidance.efefefegfefe
                     </p>
                 </div>
             </section>
@@ -271,3 +271,4 @@
 
 </body>
 </html>
+
