--- a/GIS-Dataset.html
+++ b/GIS-Dataset.html
@@ -34,8 +34,68 @@
         }
     </style>
 </head>
-<!-- NAVBAR -->
+<!-- ================= COMMON NAVBAR ================= -->
 
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+    <div class="container">
+
+        <!-- Logo -->
+        <a class="navbar-brand fw-bold" href="index.html">
+            🌍 Geo-Informatics Pathshala
+        </a>
+
+        <!-- Mobile Toggle -->
+        <button class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#menu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Menu -->
+        <div class="collapse navbar-collapse" id="menu">
+
+            <ul class="navbar-nav ms-auto">
+
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">🏠 Home</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="Study-matrial-sub-page.html">
+                        📚 Study Material
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="Jobs-Vacancy.html">
+                        💼 Jobs
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="GIS-Knowledge-Hub.html">
+                        📰 News
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">
+                        📞 Contact
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="privacy-policy.html">
+                        🔒 Privacy
+                    </a>
+                </li>
+
+            </ul>
+
+        </div>
+    </div>
+</nav>
 <body>
 
     <!-- ================= HEADER ================= -->
@@ -287,14 +347,20 @@
     </section>
 
     <!-- ================= FOOTER ================= -->
-    <footer class="text-center py-3">
-        <p class="mb-0">
-            © 2026 GIS Pathshala | Free GIS Data for Learning 🌍
-        </p>
-    </footer>
+ <!-- ================= FOOTER ================= -->
+<footer class="text-center py-3 fw-bold" style="background-color:#0d6efd; color:white;">
+    <p class="mb-0">
+        © 2026 Geo-Informatics Pathshala |
+        <a href="privacy-policy.html" class="text-white text-decoration-none">Privacy Policy</a> |
+        <a href="terms.html" class="text-white text-decoration-none">Terms</a> |
+        <a href="disclaimer.html" class="text-white text-decoration-none">Disclaimer</a> |
+        <a href="contact.html" class="text-white text-decoration-none">Contact</a>
+    </p>
+</footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
+
