--- a/RS_advance_Quize.html
+++ b/RS_advance_Quize.html
@@ -81,6 +81,68 @@ body{
         </div>
     </div>
 </nav>
+    <!-- ================= COMMON NAVBAR ================= -->
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+    <div class="container">
+
+        <!-- Logo -->
+        <a class="navbar-brand fw-bold" href="index.html">
+            🌍 Geo-Informatics Pathshala
+        </a>
+
+        <!-- Mobile Toggle -->
+        <button class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#menu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Menu -->
+        <div class="collapse navbar-collapse" id="menu">
+
+            <ul class="navbar-nav ms-auto">
+
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">🏠 Home</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="Study-matrial-sub-page.html">
+                        📚 Study Material
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="Jobs-Vacancy.html">
+                        💼 Jobs
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="GIS-Knowledge-Hub.html">
+                        📰 News
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">
+                        📞 Contact
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="privacy-policy.html">
+                        🔒 Privacy
+                    </a>
+                </li>
+
+            </ul>
+
+        </div>
+    </div>
+</nav>
 
 <div class="container py-5">
 <h2 class="text-center text-danger fw-bold mb-4">
@@ -254,4 +316,5 @@ document.getElementById("result"+idx).innerHTML=
 
 </body>
 </html>
+
 
