--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -31,11 +31,68 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">🌍 Geo-Informatics Pathshala</a>
+   <!-- ================= COMMON NAVBAR ================= -->
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+    <div class="container">
+
+        <!-- Logo -->
+        <a class="navbar-brand fw-bold" href="index.html">
+            🌍 Geo-Informatics Pathshala
+        </a>
+
+        <!-- Mobile Toggle -->
+        <button class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#menu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Menu -->
+        <div class="collapse navbar-collapse" id="menu">
+
+            <ul class="navbar-nav ms-auto">
+
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">🏠 Home</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="Study-matrial-sub-page.html">
+                        📚 Study Material
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="Jobs-Vacancy.html">
+                        💼 Jobs
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="GIS-Knowledge-Hub.html">
+                        📰 News
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">
+                        📞 Contact
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="privacy-policy.html">
+                        🔒 Privacy
+                    </a>
+                </li>
+
+            </ul>
+
         </div>
-    </nav>
+    </div>
+</nav>
 
     <!-- Header -->
     <section class="header-section text-center">
@@ -124,4 +181,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
