--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -164,18 +164,16 @@
     </section>
 
     <!-- Footer -->
-    <footer class="text-center py-4">
-        <p class="mb-1">
-            © 2026 Geo-Informatics Pathshala | Learn GIS Smartly 🌍
-        </p>
-
-        <div>
-            <a href="about.html" class="text-white me-3">About</a>
-            <a href="contact.html" class="text-white me-3">Contact</a>
-            <a href="terms.html" class="text-white me-3">Terms & Conditions</a>
-            <a href="disclaimer.html" class="text-white">Disclaimer</a>
-        </div>
-    </footer>
+ <!-- ================= FOOTER ================= -->
+<footer class="text-center py-3 fw-bold" style="background-color:#0d6efd; color:white;">
+    <p class="mb-0">
+        © 2026 Geo-Informatics Pathshala |
+        <a href="privacy-policy.html" class="text-white text-decoration-none">Privacy Policy</a> |
+        <a href="terms.html" class="text-white text-decoration-none">Terms</a> |
+        <a href="disclaimer.html" class="text-white text-decoration-none">Disclaimer</a> |
+        <a href="contact.html" class="text-white text-decoration-none">Contact</a>
+    </p>
+</footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -183,3 +181,4 @@
 </body>
 
 </html>
+
