--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4SHM13B66S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4SHM13B66S'); // <-- Replace with your Measurement ID
+</script>
+<!-- End Google Analytics -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="description"
@@ -271,5 +281,6 @@
 
 </body>
 </html>
+
 
 
