--- a/GIS-Knowledge-Hub.html
+++ b/GIS-Knowledge-Hub.html
@@ -146,7 +146,7 @@
                 <div class="card shadow h-100 text-center p-3">
                     <h5>🎓 Reserch paper </h5>
                     <p>Featured Expert Article</p>
-                    <a href="article_inside_knowlde_hub.html" class="btn btn-warning btn-news">Check Article</a>
+                    <a href="Research-paper.html" class="btn btn-warning btn-news">Check Article</a>
                 </div>
             </div>
 
@@ -174,4 +174,5 @@
 
 </body>
 </html>
+
 
