--- a/Research-paper.html
+++ b/Research-paper.html
@@ -41,7 +41,8 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
     <div class="container">
-        <a class="navbar-brand fw-bold" href="index.html">🌍 GIS Pathshala</a>
+        <a class="navbar-brand fw-bold" href="index.html">🌍 Geo-Informatics Pathshala
+</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -49,7 +50,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="index.html">🏠 Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="Study-matrial-sub-page.html">📚 Study Material</a></li>
-                <li class="nav-item"><a class="nav-link" href="Research-Papers.html">📝 Research Papers</a></li>
+                <li class="nav-item"><a class="nav-link" href="Research-paper.html">📝 Research Papers</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">📞 Contact</a></li>
                 <li class="nav-item"><a class="nav-link" href="privacy-policy.html">🔒 Privacy</a></li>
             </ul>
@@ -117,3 +118,4 @@ technological revolution</h5>
 </body>
 
 </html>
+
